# osrs-ml

./: .gitignore  data.dvc  docker-compose.yml  pyproject.toml  workbook.ipynb
.dvc/: config
api/: Dockerfile  index.js
pipeline/: runescrape.py
schema/: player_features.sql  zulrah.sql
