[tool.poetry]
name = "osrs-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "osrs_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
metaflow = "^2.8.3"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
backoff = "^2.2.1"
click = "^8.1.3"
clickhouse-driver = "^0.2.5"
rich = "^13.3.4"
clickhouse-connect = "^0.5.20"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
